# School21_Project

./: README.md
Algorithms/A2_SimpleNavigator_v1.0/: check_list.md
Algorithms/A2_SimpleNavigator_v1.0/src/: Makefile  exportFile.dot  graph  graph_4.txt  graph_5.txt  graph_5_1.txt  main.cpp  s21_graph.cpp  s21_graph.h  s21_graph_algorithms.cpp  s21_graph_algorithms.h
C++/CPP4_3DViewer_v2.0-1/: CMakeLists.txt
C++/CPP4_3DViewer_v2.0-1/src/: Makefile  dvi.html  telegram_bot.sh
C++/CPP4_3DViewer_v2.0-1/src/controller/: controller.cc  controller.h
C++/CPP4_3DViewer_v2.0-1/src/model/: facade.cc  facade.h
C++/CPP4_3DViewer_v2.0-1/src/model/dao/: data_model.cc  data_model.h
C++/CPP4_3DViewer_v2.0-1/src/model/kernel/: optimal_scale_calculator.cc  optimal_scale_calculator.h  parser.cc  parser.h
C++/CPP4_3DViewer_v2.0-1/src/model/kernel/strategy_transform/: move.cc  move.h  rotate.cc  rotate.h  scale.cc  scale.h  transform_strategy.cc  transform_strategy.h  transformer.h
C++/CPP4_3DViewer_v2.0-1/src/model/observer/: observable.h  observer.h
C++/CPP4_3DViewer_v2.0-1/src/tests/: tests.cc
C++/CPP4_3DViewer_v2.0-1/src/tests/test_view/: test_view.cc  test_view.h
C++/CPP4_3DViewer_v2.0-1/src/view/: 3DViewer_v2.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  type_transform.h
C++/CPP4_3DViewer_v2.0-1/src/view/gl_widget/: glviewer.cpp  glviewer.h
C++/CPP4_3DViewer_v2.0-1/src/view/media_creator/: media.cpp  media.h
C++/CPP4_3DViewer_v2.0-1/src/view/settings/: save_settings.cpp  save_settings.h
C++/CPP5_3DViewer_v2.1/src/: Makefile  info.html
C++/CPP5_3DViewer_v2.1/src/tests/: gtests.cc  (+1 more)
C/C7_SmartCalc_v1.0/: check_list.md
C/C7_SmartCalc_v1.0/src/: polish.c  reedmi.md  s21_SmartCalc.c  s21_SmartCalc.h  stack.c
Linux/DO6_CICD/: check_list.md
Linux/DO6_CICD/src/: copy.sh  notify.sh  report.md
SQL/SQL2_Info21_v1.0/src/: part1.sql  part2.sql  part3.sql  part4.sql
SQL/SQL3_RetailAnalitycs_v1.0/: Check_list.md
(+60 files in other folders)
